Fix content spacing in columns

--- a/src/css/art-to-heart-styles.css
+++ b/src/css/art-to-heart-styles.css
@@ -222,7 +222,7 @@ a {
 }
 
 .column-header {
-    line-height: 3rem;
+    line-height: 2rem;
 }
 
 #column-one-image {
@@ -273,7 +273,7 @@ a {
 }
 
 .clip-bottom-content-top {
-    padding-top: 7rem;
+    padding-top: 10rem;
 }
 
 .clip-bottom-content-top img {
